COLOR USING MOUSE HOLD
- Color using mouse hold functionality added.
- Used mousedown and mouseup event listeners.
- Used mouseenter event listener to change background color to black.

--- a/style.css
+++ b/style.css
@@ -23,12 +23,9 @@ body {
     border-bottom: 1px solid black;
     display: flex;
 }
-.column {
+.box {
     box-sizing: border-box;
     border-left: 1px solid black;
     border-right: 1px solid black;
     flex: 1;
-}
-.column:hover {
-    background-color:rgb(139, 139, 139);
 }
