--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
 body {
     margin: 0px;
     height: 100vh;
-    
+    background-color: #dddddd;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
-
 #sketch-board {
     border: solid black 3px;
     height: 700px;
     width: 700px;
-
+    background-color: white;
     display:flex;
     flex-direction: column;
 }
@@ -28,4 +27,52 @@ body {
     border-left: 1px solid black;
     border-right: 1px solid black;
     flex: 1;
+}
+.buttons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 700px;
+}
+.pixelButton {
+    font-family: "Tiny5", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    cursor: pointer;
+    background: hsl(0, 0%, 100%);
+    padding: 16px 24px;
+    position: relative;
+    border-radius: 8px;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.01);
+
+  &::after {
+    position: absolute;
+    content: "";
+    top: 15px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    transform: scale(0.9) translateZ(0);
+    filter: blur(15px);
+    background: linear-gradient(
+      to left,
+      #5EABD6,
+      #FEFBC7,
+      #FFB4B4,
+      #E14434
+    );
+    background-size: 200% 200%;
+    animation: animateGlow 1.25s linear infinite;
+  }
+}
+
+@keyframes animateGlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
+  }
 }
