--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@ body {
     justify-content: stretch;
     align-items: center;
     box-sizing: border-box;
+    user-select: none;
 }
 
 .main,
 .footer { 
     /* for temporary visualizing */
-    /* border: solid black 2px; */
+    border: solid black 2px;
     
     flex: 1 1 auto;
     width: 100vw;
@@ -37,8 +38,10 @@ body {
     width: 10vw;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: stretch;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 .leftButton {
     width: auto;
@@ -70,7 +73,18 @@ body {
     background-color: white;
     display:flex;
     flex-direction: column;
-
+}
+.row {
+    box-sizing: border-box;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    display: flex;
+}
+.box {
+    box-sizing: border-box;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    flex: 1;
 }
 
 /* misc options container */
