--- a/style.css
+++ b/style.css
@@ -128,12 +128,13 @@ body {
     margin: 25px 0;
     box-shadow: #222222 10px 10px;
 }
-.uploadButton {
-    align-self: flex-end;
-    margin: 0 25px;
+#uploadButton {
+    /* align-self: flex-end; */
+    /* margin: 0 25px; */
+    height: 50px;
     cursor: pointer;
     border: var(--font) solid 1px;
-    aspect-ratio: 3/1;
+    /* aspect-ratio: 3/1; */
     width: 40%;
     display: flex;
     justify-content: center;
