--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ html, body {
     height: 100%;
 }
 body {
+    user-select: none;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
